crates/kirin-derive-interpreter/src/snapshots/kirin_derive_interpreter__interpretable__tests__interpretable_custom_crate_paths.snap
---
source: crates/kirin-derive-interpreter-new/src/interpretable.rs
expression: generate_interpretable_code(input)
---
#[automatically_derived]
impl<__InterpL, T, __InterpI, __InterpF, __InterpC, __InterpE, __InterpT>
    kirin_interpreter::Interpretable<
        __InterpL,
        __InterpI,
        __InterpF,
        __InterpC,
        __InterpE,
        __InterpT,
    > for Ops<T>
where
    __InterpL: kirin_ir::Dialect,
    A<T>: kirin_interpreter::Interpretable<
        __InterpL,
        __InterpI,
        __InterpF,
        __InterpC,
        __InterpE,
        __InterpT,
    >,
{
    fn interpret(
        &self,
        location: kirin_interpreter::Location,
        env: kirin_interpreter::EnvIndex,
        interp: &mut __InterpI,
    ) -> Result<kirin_interpreter::StatementEffect<__InterpF, __InterpC, __InterpT>, __InterpE>
    {
        match self {
            Self::A(field_0) => <A<T> as kirin_interpreter::Interpretable<
                __InterpL,
                __InterpI,
                __InterpF,
                __InterpC,
                __InterpE,
                __InterpT,
            >>::interpret(field_0, location, env, interp),
        }
    }
}
