crates/kirin-derive-interpreter/src/snapshots/kirin_derive_interpreter__interpretable__tests__interpretable_enum_all_wraps.snap
---
source: crates/kirin-derive-interpreter/src/interpretable.rs
assertion_line: 116
expression: generate_interpretable_code(input)
---
#[automatically_derived]
impl<'__ir, __InterpI, __InterpL> ::kirin_interpreter::Interpretable<'__ir, __InterpI, __InterpL>
    for ArithOps
where
    __InterpI: ::kirin_interpreter::Interpreter<'__ir>,
    __InterpL: ::kirin::ir::Dialect,
    AddOp: ::kirin_interpreter::Interpretable<'__ir, __InterpI, __InterpL>,
    SubOp: ::kirin_interpreter::Interpretable<'__ir, __InterpI, __InterpL>,
    MulOp: ::kirin_interpreter::Interpretable<'__ir, __InterpI, __InterpL>,
{
    fn interpret(
        &self,
        interpreter: &mut __InterpI,
    ) -> Result<::kirin_interpreter::Continuation<__InterpI::Value, __InterpI::Ext>, __InterpI::Error>
    {
        match self {
            Self::Add(field_0) => field_0.interpret(interpreter),
            Self::Sub(field_0) => field_0.interpret(interpreter),
            Self::Mul(field_0) => field_0.interpret(interpreter),
        }
    }
}
