crates/kirin-derive-interpreter/src/snapshots/kirin_derive_interpreter__interpretable__tests__interpretable_enum_level_wraps.snap
---
source: crates/kirin-derive-interpreter/src/interpretable.rs
expression: generate_interpretable_code(input)
---
#[automatically_derived]
impl<T: CompileTimeValue, __InterpI, __Kind> ::kirin_interpreter::Interpretable<__InterpI, __Kind>
    for Lexical<T>
where
    __InterpI: ::kirin_interpreter::Interp,
    Function<T>: ::kirin_interpreter::Interpretable<__InterpI, __Kind>,
    Call<T>: ::kirin_interpreter::Interpretable<__InterpI, __Kind>,
    Return<T>: ::kirin_interpreter::Interpretable<__InterpI, __Kind>,
{
    fn interpret(
        &self,
        interp: &mut __InterpI,
    ) -> Result<
        <__InterpI as ::kirin_interpreter::Interp>::Effect,
        <__InterpI as ::kirin_interpreter::Interp>::Error,
    > {
        match self {
            Self::Function(field_0) => <Function<T> as ::kirin_interpreter::Interpretable<
                __InterpI,
                __Kind,
            >>::interpret(field_0, interp),
            Self::Call(field_0) => <Call<T> as ::kirin_interpreter::Interpretable<
                __InterpI,
                __Kind,
            >>::interpret(field_0, interp),
            Self::Return(field_0) => <Return<T> as ::kirin_interpreter::Interpretable<
                __InterpI,
                __Kind,
            >>::interpret(field_0, interp),
        }
    }
}
