crates/kirin-derive-interpreter/src/snapshots/kirin_derive_interpreter__interpretable__tests__interpretable_per_variant_wraps.snap
---
source: crates/kirin-derive-interpreter/src/interpretable.rs
expression: generate_interpretable_code(input)
---
#[automatically_derived]
impl<__InterpL, __InterpI, __InterpF, __InterpC, __InterpE, __InterpT>
    ::kirin_interpreter::Interpretable<
        __InterpL,
        __InterpI,
        __InterpF,
        __InterpC,
        __InterpE,
        __InterpT,
    > for HighLevel
where
    __InterpL: ::kirin::ir::Dialect,
    Lexical<ArithType>: ::kirin_interpreter::Interpretable<
        __InterpL,
        __InterpI,
        __InterpF,
        __InterpC,
        __InterpE,
        __InterpT,
    >,
    Arith<ArithType>: ::kirin_interpreter::Interpretable<
        __InterpL,
        __InterpI,
        __InterpF,
        __InterpC,
        __InterpE,
        __InterpT,
    >,
{
    fn interpret(
        &self,
        location: ::kirin_interpreter::Location,
        env: ::kirin_interpreter::EnvIndex,
        interp: &mut __InterpI,
    ) -> Result<::kirin_interpreter::StatementEffect<__InterpF, __InterpC, __InterpT>, __InterpE>
    {
        match self {
            Self::Lexical(field_0) => <Lexical<ArithType> as ::kirin_interpreter::Interpretable<
                __InterpL,
                __InterpI,
                __InterpF,
                __InterpC,
                __InterpE,
                __InterpT,
            >>::interpret(field_0, location, env, interp),
            Self::Arith(field_0) => <Arith<ArithType> as ::kirin_interpreter::Interpretable<
                __InterpL,
                __InterpI,
                __InterpF,
                __InterpC,
                __InterpE,
                __InterpT,
            >>::interpret(field_0, location, env, interp),
        }
    }
}
