crates/kirin-derive-interpreter/src/snapshots/kirin_derive_interpreter__interpretable__tests__interpretable_single_wraps.snap
---
source: crates/kirin-derive-interpreter/src/interpretable.rs
expression: generate_interpretable_code(input)
---
#[automatically_derived]
impl<'__ir, __InterpI, __InterpL> ::kirin_interpreter::Interpretable<'__ir, __InterpI, __InterpL>
    for SingleOp
where
    __InterpI: ::kirin_interpreter::Interpreter<'__ir>,
    __InterpL: ::kirin_ir::Dialect,
    OnlyOp: ::kirin_interpreter::Interpretable<'__ir, __InterpI, __InterpL>,
{
    fn interpret(
        &self,
        interpreter: &mut __InterpI,
    ) -> Result<::kirin_interpreter::Continuation<__InterpI::Value, __InterpI::Ext>, __InterpI::Error>
    {
        match self {
            Self::Only(field_0) => field_0.interpret(interpreter),
        }
    }
}
